--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build": "eas build",
+    "build:ios": "eas build -p ios",
+    "build:android": "eas build -p android",
+    "submit": "eas submit",
+    "submit:ios": "eas submit -p ios",
+    "submit:android": "eas submit -p android"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
